2001-05-01  Andy Hertzfeld  <andy@eazel.com>

	* components/news/nautilus-news.c: (has_matching_uri),
	(mark_new_items):
	fixed problem where the new flag wasn't being maintained
	properly after updating, since it was using a whole new item
	list.  Fixed by propogating the new flag from the corresponding
	old item.
	
2001-05-01  Darin Adler  <darin@eazel.com>

	reviewed by: John Sullivan <sullivan@eazel.com>

	Some enhancements to icon lookup.

	* libnautilus-extensions/nautilus-icon-factory.h:
	* libnautilus-extensions/nautilus-icon-factory.c:
	(get_mime_type_icon_without_suffix): Function used to strip suffixes
	out so we can have file suffixes in the gnome-vfs icon database, but
	can ignore them and look at all suffixes for the named icon.
	(make_icon_name_from_mime_type): Construct an icon name for types
	that don't specify a particular icon. This allows theme designers
	to make icons for any MIME type.
	(get_icon_name_for_regular_file): Use the new "without suffix" call.
	This requires changing this function to return a strdup'd name.
	(get_icon_name_for_directory), (get_icon_name_for_file): Change to
	return a strdup'd name.
	(make_full_icon_path): Do the file exists check in here (was
	already doing it in some cases) and also call
	gnome_vfs_icon_path_from_filename.
	(get_themed_icon_file_path): Get rid of redundant g_file_exists
	checks and gnome_vfs_icon_path_from_filename call, since both are
	now handled inside make_full_icon_path.
	(nautilus_scalable_icon_get_text_pieces),
	(nautilus_scalable_icon_new_from_text_pieces),
	(nautilus_scalable_icon_unref), (nautilus_scalable_icon_hash),
	(nautilus_scalable_icon_equal): Add MIME type to the scalable
	icons.
	(nautilus_icon_factory_get_icon_for_file): Pass in the MIME type.
	(nautilus_icon_factory_get_emblem_icon_by_name): Pass NULL for
	MIME type.
	(load_pixbuf_svg): Change to pass in boolean for emblem hack since
	we don't always have an icon name.
	(load_icon_from_path): New function, share common code.